--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,8 +16,8 @@
 title: Screwdriver Guide
 description: > # this means to ignore newlines until "baseurl:"
   Screwdriver is a collection of services that facilitate the workflow for continuous delivery pipelines.
-baseurl: "/screwdriver-cd-guide" # the subpath of your site, e.g. /blog
-url: "https://paion-data.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://screwdriver-docs.paion-data.dev" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
