--- a/docs/_data/menu.yml
+++ b/docs/_data/menu.yml
@@ -1,118 +1,118 @@
 - title: "Home"
-  url: "/screwdriver-cd-guide/"
+  url: "/"
 - title: "User Guide"
   subcategories:
     - title: "Quickstart"
-      url: "/screwdriver-cd-guide/user-guide/quickstart"
+      url: "/user-guide/quickstart"
     - title: "Tokens"
-      url: "/screwdriver-cd-guide/user-guide/tokens"
+      url: "/user-guide/tokens"
     - title: "API"
-      url: "/screwdriver-cd-guide/user-guide/api"
+      url: "/user-guide/api"
     - title: "Authentication and Authorization"
-      url: "/screwdriver-cd-guide/user-guide/authentication-authorization"
+      url: "/user-guide/authentication-authorization"
     - title: "SCM"
-      url: "/screwdriver-cd-guide/user-guide/scm"
+      url: "/user-guide/scm"
     - title: "Configuration"
       subcategories:
         - title: "Overall"
-          url: "/screwdriver-cd-guide/user-guide/configuration/"
+          url: "/user-guide/configuration/"
         - title: "Job Configuration"
-          url: "/screwdriver-cd-guide/user-guide/configuration/jobconfiguration"
+          url: "/user-guide/configuration/jobconfiguration"
         - title: "Stages"
-          url: "/screwdriver-cd-guide/user-guide/configuration/stages"
+          url: "/user-guide/configuration/stages"
         - title: "Workflow"
-          url: "/screwdriver-cd-guide/user-guide/configuration/workflow"
+          url: "/user-guide/configuration/workflow"
         - title: "Environment"
-          url: "/screwdriver-cd-guide/user-guide/configuration/environment"
+          url: "/user-guide/configuration/environment"
         - title: "Annotations"
-          url: "/screwdriver-cd-guide/user-guide/configuration/annotations"
+          url: "/user-guide/configuration/annotations"
         - title: "Code Coverage"
-          url: "/screwdriver-cd-guide/user-guide/configuration/code-coverage"
+          url: "/user-guide/configuration/code-coverage"
         - title: "Secrets"
-          url: "/screwdriver-cd-guide/user-guide/configuration/secrets"
+          url: "/user-guide/configuration/secrets"
         - title: "Notifications"
-          url: "/screwdriver-cd-guide/user-guide/configuration/settings"
+          url: "/user-guide/configuration/settings"
         - title: "Source Paths"
-          url: "/screwdriver-cd-guide/user-guide/configuration/sourcePaths"
+          url: "/user-guide/configuration/sourcePaths"
         - title: "Source Directory"
-          url: "/screwdriver-cd-guide/user-guide/configuration/sourceDirectory"
+          url: "/user-guide/configuration/sourceDirectory"
         - title: "External Config"
-          url: "/screwdriver-cd-guide/user-guide/configuration/externalConfig"
+          url: "/user-guide/configuration/externalConfig"
         - title: "Build Cache"
-          url: "/screwdriver-cd-guide/user-guide/configuration/build-cache"
+          url: "/user-guide/configuration/build-cache"
         - title: "Parameters"
-          url: "/screwdriver-cd-guide/user-guide/configuration/parameters"
+          url: "/user-guide/configuration/parameters"
     - title: "Metadata"
-      url: "/screwdriver-cd-guide/user-guide/metadata"
+      url: "/user-guide/metadata"
     - title: "Environment Variables"
-      url: "/screwdriver-cd-guide/user-guide/environment-variables"
+      url: "/user-guide/environment-variables"
     - title: "Templates"
       subcategories:
         - title: Job Templates
-          url: "/screwdriver-cd-guide/user-guide/templates/job-templates"
+          url: "/user-guide/templates/job-templates"
         - title: Pipeline Templates
-          url: "/screwdriver-cd-guide/user-guide/templates/pipeline-templates"
+          url: "/user-guide/templates/pipeline-templates"
     - title: "Commands"
-      url: "/screwdriver-cd-guide/user-guide/commands"
+      url: "/user-guide/commands"
     - title: "Local Build"
-      url: "/screwdriver-cd-guide/user-guide/local"
+      url: "/user-guide/local"
     - title: "FAQ"
-      url: "/screwdriver-cd-guide/user-guide/FAQ"
+      url: "/user-guide/FAQ"
 - title: "Cluster Management"
   subcategories:
     - title: "Overall Architecture"
-      url: "/screwdriver-cd-guide/cluster-management/"
+      url: "/cluster-management/"
     - title: "Configuring the API"
-      url: "/screwdriver-cd-guide/cluster-management/configure-api"
+      url: "/cluster-management/configure-api"
     - title: "Configuring the UI"
-      url: "/screwdriver-cd-guide/cluster-management/configure-ui"
+      url: "/cluster-management/configure-ui"
     - title: "Configuring the Store"
-      url: "/screwdriver-cd-guide/cluster-management/configure-store"
+      url: "/cluster-management/configure-store"
     - title: "Configuring the Queue Service"
-      url: "/screwdriver-cd-guide/cluster-management/configure-queue-service"
+      url: "/cluster-management/configure-queue-service"
     - title: "Configuring Build Cluster Queue Worker"
-      url: "/screwdriver-cd-guide/cluster-management/configure-buildcluster-queue-worker"
+      url: "/cluster-management/configure-buildcluster-queue-worker"
     - title: Configuring the Artifacts Unzip Service
-      url: "/screwdriver-cd-guide/cluster-management/configure-artifacts-unzip-service"
+      url: "/cluster-management/configure-artifacts-unzip-service"
     - title: "SD-in-a-Box"
-      url: "/screwdriver-cd-guide/cluster-management/running-locally"
+      url: "/cluster-management/running-locally"
     - title: "Setting Up a Screwdriver Cluster on AWS using Kubernetes"
-      url: "/screwdriver-cd-guide/cluster-management/kubernetes"
+      url: "/cluster-management/kubernetes"
     - title: "Setting Up Zip Artifacts"
-      url: "/screwdriver-cd-guide/cluster-management/zip-artifacts"
+      url: "/cluster-management/zip-artifacts"
     - title: "Setting Up a Screwdriver Cluster using Kubernetes helm chart"
-      url: "/screwdriver-cd-guide/cluster-management/helm"
+      url: "/cluster-management/helm"
     - title: "Setting Up AWS native CI/CD builds"
-      url: "/screwdriver-cd-guide/cluster-management/aws-integration"
+      url: "/cluster-management/aws-integration"
     - title: "Dependencies"
-      url: "/screwdriver-cd-guide/cluster-management/dependencies"
+      url: "/cluster-management/dependencies"
     - title: "Configure Build"
-      url: "/screwdriver-cd-guide/cluster-management/configure-build"
+      url: "/cluster-management/configure-build"
     - title: "Collect Metrics"
-      url: "/screwdriver-cd-guide/cluster-management/collect-metrics"
+      url: "/cluster-management/collect-metrics"
     - title: "FAQ"
-      url: "/screwdriver-cd-guide/cluster-management/FAQ"
+      url: "/cluster-management/FAQ"
 - title: "About"
   subcategories:
     - title: "What is Screwdriver?"
-      url: "/screwdriver-cd-guide/about"
+      url: "/about"
     - title: "Appendix"
       subcategories:
         - title: "Domain Model"
-          url: "/screwdriver-cd-guide/about/appendix/domain"
+          url: "/about/appendix/domain"
     - title: "Contributing"
       subcategories:
         - title: "Issues"
-          url: "/screwdriver-cd-guide/about/contributing/issues"
+          url: "/about/contributing/issues"
         - title: "Where to Contribute"
-          url: "/screwdriver-cd-guide/about/contributing/where-to-contribute"
+          url: "/about/contributing/where-to-contribute"
         - title: "Getting Started Developing"
-          url: "/screwdriver-cd-guide/about/contributing/getting-started-developing"
+          url: "/about/contributing/getting-started-developing"
         - title: "Overview"
-          url: "/screwdriver-cd-guide/about/contributing/index"
+          url: "/about/contributing/index"
     - title: "Support"
-      url: "/screwdriver-cd-guide/about/support"
+      url: "/about/support"
     - title: "Security"
-      url: "/screwdriver-cd-guide/about/security"
+      url: "/about/security"
     - title: "Announcements"
-      url: "/screwdriver-cd-guide/about/announcements"
+      url: "/about/announcements"
